# layer1run

./: .gitignore  LICENSE  README.md  ROADMAP.md
cli/: README.md
cli/rs/: Cargo.toml
cli/rs/scripts/: run
cli/rs/src/: api.rs  eval.rs  guru.rs  lib.rs  noderunr.rs  p2p.rs  privacy.rs  ui.rs  utils.rs
cli/rs/src/artwork/: welcome.rs
cli/rs/src/cmd/: network.rs  sys.rs
cli/rs/src/comm/: monitor.rs  request_ipfs.rs  request_json.rs
cli/rs/src/commander/: sys.rs
cli/rs/src/logger/: local.rs
cli/rs/src/node/: session.rs
cli/rs/src/p2p/: comm.rs
cli/rs/src/profiles/: session.rs
cli/rs/src/ui/: notif.rs  welcome.rs
cli/rs/src/utils/: ip.rs  remote.rs
cli/rs/tests/: file_doesnt_exist.rs
cli/scripts/: run
cli/src/: cmd.rs  comm.rs  crypto.rs  utils.rs
cli/src/cmd/: network.rs
cli/src/crypto/: hashes.rs
cli/src/logger/: remote.rs
daemon/: Cargo.toml  README.md  RELEASE.md
daemon/src/: api.rs  lib.rs  noderunr.rs
daemon/src/cmd/: sys.rs
daemon/src/comm/: monitor.rs  request_json.rs
daemon/src/node/: session.rs
daemon/src/utils/: logger.rs
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: conf.py  index.rst  next.config.mjs  package.json  pnpm-lock.yaml
docs/source/: concierge.rst  conf.py  index.rst  superuser.rst  usage.rst
docs/src/components/: Heading.jsx  Navigation.jsx
install/: install.ps1
web/: Dockerfile  README.md  docker-compose.yml  next.config.mjs  package.json  pnpm-lock.yaml
web/src/app/: layout.jsx  page.mdx
web/src/components/: Button.jsx  FormattedDate.jsx  IconLink.jsx  Intro.jsx  Layout.jsx  Logo.jsx  Notice.jsx  ScriptCommand.jsx  SignUpForm.jsx  SparkleIcon.jsx  StarField.jsx  VideoPlayer.jsx  mdx.jsx
