[package]
name = "noderunr"
version = "25.5.8"
authors = ["L1 GÜRŲ -- https://x.com/0xShomari"]
description = "NodΞRunr is a lightweight, smart daemon delivering effortless SysOps to Founders and Teams — It’s fast, beautiful, and completely FREE!"
homepage = "https://layer1.run"
repository = "https://github.com/layer1guru/layer1run"
categories = ["blockchain", "cryptocurrency"]
keywords = ["avalanche", "avax", "crypto", "cryptocurrency", "layer1", "subnet"]
readme = "README.md"
license = "MIT"
edition = "2018"

[[bin]]
name = "noderunr"
path = "src/noderunr.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "string"] }
env_logger = "0.11.8"
human-panic = "2.0.2"
indicatif = "0.17.11"
interactive_process = "0.1.3"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
