[package]
name = "noderunr"
version = "24.11.28"
authors = ["Shomari <nyusternie@protonmail.com>"]
description = "L1 NodΞRunr offers a FOSS solution for managing your Layer-1 nodes locally OR via cloud."
homepage = "https://layer1.run"
repository = "https://github.com/nyusternie/layer1run"
categories = ["blockchain", "cryptocurrency"]
keywords = ["avalanche", "avax", "crypto", "cryptocurrency", "bot", "command-line"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "noderunr"
path = "src/noderunr.rs"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
env_logger = "0.9.0"
human-panic = "1.0.3"
indicatif = "0.17.1"
ipfs = { git = "https://github.com/rs-ipfs/rust-ipfs" }
log = "0.4.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.215"
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
