[package]
name = "noderunr"
version = "24.12.24"
authors = ["L1 GÜRŲ -- https://x.com/0xShomari"]
description = "NodΞRunr offers a FOSS solution for managing your Layer-1 nodes locally OR via cloud."
homepage = "https://layer1.run"
repository = "https://github.com/nyusternie/layer1run"
categories = ["blockchain", "cryptocurrency"]
keywords = ["avalanche", "avax", "crypto", "cryptocurrency", "layer1", "subnet"]
readme = "README.md"
license = "MIT"
edition = "2018"

[[bin]]
name = "noderunr"
path = "src/noderunr.rs"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
env_logger = "0.9.0"
human-panic = "1.0.3"
indicatif = "0.17.1"
interactive_process = "0.1.3"
log = "0.4.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.215"
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
